--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ body {
 /* 🖼️ LOGO DE FOND FIXE SUR TOUTE LA PAGE */
 body::before {
     content: "";
-    position: sticky; /* Reste fixe au défilement */
+    position: fixed; /* Reste fixe au défilement */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     
     /* Configuration de l'image du logo */
-    background-image: url('logo.svg'); 
+    background-image: url('LOGO FCS.png'); 
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 150%; /* Très grand, ajustez si besoin */
