--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body::before {
     position: fixed; /* Reste fixe au défilement */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     
     /* Configuration de l'image du logo */
     background-image: url('LOGO FCS.png'); 
