--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Importation de la police Google Fonts (Poppins pour Bold/Titres et Inter pour le corps) */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800;900&family=Inter:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
 /* ========================================= */
 /* 1. FONDATIONS & VARIABLES (CONTRASTES) */
@@ -345,7 +346,7 @@ footer {
 /* Nouveau style pour le nom du site à côté du logo */
 .site-name-text {
     /* 1. Changer la Police (Remplacez par le nom d'une police que vous avez chargée) */
-    font-family: "Georgia", serif; /* Exemple d'une police élégante */
+    font-family: "Dancing Script", serif; /* Exemple d'une police élégante */
     /* 2. Changer la Taille du Texte */
     font-size: 1.8em; 
     /* 3. Définir une Belle Couleur */
