--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ h1, h2, h3 {
 
 /* ⬅️ AJOUTEZ : Centrage du contenu (paragraphe + bouton) dans l'image */
 .hero-content {
-    position: absolute;
     top: 55%; /* Légèrement plus bas que 50% pour laisser de la place au menu */
     left: 50%;
     transform: translate(-50%, -50%); 
@@ -131,6 +130,8 @@ h1, h2, h3 {
     max-width: 800px;
     color: white; /* Pour la lisibilité sur l'image */
     z-index: 5;
+    margin-top: 40px; 
+    
 }
 
 
@@ -154,7 +155,6 @@ header { /* Ou utilisez .main-header si vous avez ajouté cette classe en HTML *
     /* position: sticky; */ 
     
     /* ⬅️ AJOUTER : Positionnement pour la navigation en haut de l'image */
-    position: absolute; 
     top: 0;
     width: 100%;
     
